网关添加心跳

--- a/nginx-conf/lua.conf
+++ b/nginx-conf/lua.conf
@@ -36,4 +36,10 @@ server{
 		content_by_lua_file lua-func/event-func/event_handle.lua;
 	}
 	
+	#service management
+	location ~*^/v0001/heartbeat{
+		default_type 'text/json';
+		lua_need_request_body on;
+		content_by_lua_file lua-func/heartbeat.lua; 
+	}
 }
