1. 修改openresty的启动方式 2. 修改openresty的日志目录 3. 增加日志切分，每天切分一次，保留7天日志。

--- a/nginx-conf/initialization.conf
+++ b/nginx-conf/initialization.conf
@@ -8,8 +8,8 @@ worker_cpu_affinity auto;
 worker_shutdown_timeout 30;
 
 #log path
-error_log /userdata/logs/openresty.log debug;
-pid /usr/local/7g-box/openresty-svr/logs/nginx.pid;
+error_log /userdata/logs/nginx/openresty.log info;
+pid /var/tmp/nginx.pid;
 
 events {
 	worker_connections 1024;
