修改openresty日志登记为debug。

--- a/nginx-conf/initialization.conf
+++ b/nginx-conf/initialization.conf
@@ -8,7 +8,7 @@ worker_cpu_affinity auto;
 worker_shutdown_timeout 30;
 
 #log path
-error_log /userdata/logs/nginx/openresty.log info;
+error_log /userdata/logs/nginx/openresty.log debug;
 pid /var/tmp/nginx.pid;
 
 events {
